--- a/css/styleSheet.css
+++ b/css/styleSheet.css
@@ -26,7 +26,7 @@ td{
 }
 
 body{
-
+    font-size: 18px;
     background-color: #ccc;
     background: url(img/holz.jpg);
     opacity: 0.9;
@@ -39,13 +39,10 @@ body{
     text-align: center;   
 }
 
-#form_order{
-    size: 50px;
 
-}
 
 .img-responsive{
-    max-height: 100px;
-    max-width: 100px;    
+    max-height: 300px;
+    max-width: 300px;    
 }
 
